docs/send/manuale-operativo/v1.0/SUMMARY.md
# Table of contents

* [Piattaforma Notifiche - Manuale Operativo](README.md)
  * [Glossario](../../../oBwhR0C1TZjRAwNbGVus/piattaforma-notifiche-manuale-operativo/glossario.md)
  * [Il processo di notificazione](../../../oBwhR0C1TZjRAwNbGVus/piattaforma-notifiche-manuale-operativo/il-processo-di-notificazione/README.md)
    * [Spese della notifica](../../../oBwhR0C1TZjRAwNbGVus/piattaforma-notifiche-manuale-operativo/il-processo-di-notificazione/spese-della-notifica.md)
    * [Notificazione digitale](../../../oBwhR0C1TZjRAwNbGVus/piattaforma-notifiche-manuale-operativo/il-processo-di-notificazione/notificazione-digitale.md)
    * [Notificazione analogica](../../../oBwhR0C1TZjRAwNbGVus/piattaforma-notifiche-manuale-operativo/il-processo-di-notificazione/notificazione-analogica.md)
  * [Comprendere la timeline di una notifica e gli atti prodotti](../../../oBwhR0C1TZjRAwNbGVus/piattaforma-notifiche-manuale-operativo/comprendere-la-timeline-di-una-notifica-e-gli-atti-prodotti/README.md)
    * [Notificazione digitale](../../../oBwhR0C1TZjRAwNbGVus/piattaforma-notifiche-manuale-operativo/comprendere-la-timeline-di-una-notifica-e-gli-atti-prodotti/notificazione-digitale.md)
    * [Notificazione analogica](../../../oBwhR0C1TZjRAwNbGVus/piattaforma-notifiche-manuale-operativo/comprendere-la-timeline-di-una-notifica-e-gli-atti-prodotti/notificazione-analogica.md)
    * [Destinatari multipli](../../../oBwhR0C1TZjRAwNbGVus/piattaforma-notifiche-manuale-operativo/comprendere-la-timeline-di-una-notifica-e-gli-atti-prodotti/destinatari-multipli.md)
    * [Informazione di stato sintetica](../../../oBwhR0C1TZjRAwNbGVus/piattaforma-notifiche-manuale-operativo/comprendere-la-timeline-di-una-notifica-e-gli-atti-prodotti/informazione-di-stato-sintetica.md)
    * [Attestazione opponibili ai terzi](../../../oBwhR0C1TZjRAwNbGVus/piattaforma-notifiche-manuale-operativo/comprendere-la-timeline-di-una-notifica-e-gli-atti-prodotti/attestazione-opponibili-ai-terzi.md)
  * [La protezione dei dati](../../../oBwhR0C1TZjRAwNbGVus/piattaforma-notifiche-manuale-operativo/la-protezione-dei-dati/README.md)
    * [Verifica dei dati in ingresso](../../../oBwhR0C1TZjRAwNbGVus/piattaforma-notifiche-manuale-operativo/la-protezione-dei-dati/verifica-dei-dati-in-ingresso.md)
    * [Immodificabilità dei documenti informatici memorizzati](../../../oBwhR0C1TZjRAwNbGVus/piattaforma-notifiche-manuale-operativo/la-protezione-dei-dati/immodificabilita-dei-documenti-informatici-memorizzati.md)
    * [Generazione delle attestazioni opponibili ai terzi](../../../oBwhR0C1TZjRAwNbGVus/piattaforma-notifiche-manuale-operativo/la-protezione-dei-dati/generazione-delle-attestazioni-opponibili-ai-terzi.md)
    * [Log di sistema - anonimizzazione e conservazione](../../../oBwhR0C1TZjRAwNbGVus/piattaforma-notifiche-manuale-operativo/la-protezione-dei-dati/log-di-sistema-anonimizzazione-e-conservazione.md)
    * [Altri dati - conservazione](../../../oBwhR0C1TZjRAwNbGVus/piattaforma-notifiche-manuale-operativo/la-protezione-dei-dati/altri-dati-conservazione.md)
  * [Mittente](../../../oBwhR0C1TZjRAwNbGVus/piattaforma-notifiche-manuale-operativo/mittente/README.md)
    * [Area Riservata portale Self Care](../../../oBwhR0C1TZjRAwNbGVus/piattaforma-notifiche-manuale-operativo/mittente/area-riservata-portale-self-care.md)
    * [Funzionario autorizzato del mittente](../../../oBwhR0C1TZjRAwNbGVus/piattaforma-notifiche-manuale-operativo/mittente/funzionario-autorizzato-del-mittente/README.md)
      * [Richiesta di Onboarding - processo di adesione](../../../oBwhR0C1TZjRAwNbGVus/piattaforma-notifiche-manuale-operativo/mittente/funzionario-autorizzato-del-mittente/richiesta-di-onboarding-processo-di-adesione.md)
    * [Referente Amministrativo](../../../oBwhR0C1TZjRAwNbGVus/piattaforma-notifiche-manuale-operativo/mittente/referente-amministrativo/README.md)
      * [Accesso all’Area Riservata](../../../oBwhR0C1TZjRAwNbGVus/piattaforma-notifiche-manuale-operativo/mittente/referente-amministrativo/accesso-allarea-riservata.md)
      * [Dashboard](../../../oBwhR0C1TZjRAwNbGVus/piattaforma-notifiche-manuale-operativo/mittente/referente-amministrativo/dashboard.md)
      * [Configurazione utenti](../../../oBwhR0C1TZjRAwNbGVus/piattaforma-notifiche-manuale-operativo/mittente/referente-amministrativo/configurazione-utenti/README.md)
        * [Verifica degli utenti](../../../oBwhR0C1TZjRAwNbGVus/piattaforma-notifiche-manuale-operativo/mittente/referente-amministrativo/configurazione-utenti/verifica-degli-utenti.md)
      * [Configurazione gruppi](../../../oBwhR0C1TZjRAwNbGVus/piattaforma-notifiche-manuale-operativo/mittente/referente-amministrativo/configurazione-gruppi.md)
      * [Accesso a Piattaforme Notifiche](../../../oBwhR0C1TZjRAwNbGVus/piattaforma-notifiche-manuale-operativo/mittente/referente-amministrativo/accesso-a-piattaforme-notifiche.md)
      * [Invio manuale di una notifica](../../../oBwhR0C1TZjRAwNbGVus/piattaforma-notifiche-manuale-operativo/mittente/referente-amministrativo/invio-manuale-di-una-notifica.md)
      * [Visualizzazione notifiche inviate](../../../oBwhR0C1TZjRAwNbGVus/piattaforma-notifiche-manuale-operativo/mittente/referente-amministrativo/visualizzazione-notifiche-inviate/README.md)
        * [Visualizzazione notifiche per il mittente](../../../oBwhR0C1TZjRAwNbGVus/piattaforma-notifiche-manuale-operativo/mittente/referente-amministrativo/visualizzazione-notifiche-inviate/visualizzazione-notifiche-per-il-mittente.md)
        * [Dettagli di una notifica per il mittente](../../../oBwhR0C1TZjRAwNbGVus/piattaforma-notifiche-manuale-operativo/mittente/referente-amministrativo/visualizzazione-notifiche-inviate/dettagli-di-una-notifica-per-il-mittente.md)
        * [Accesso ai documenti relativi ad una notifica](../../../oBwhR0C1TZjRAwNbGVus/piattaforma-notifiche-manuale-operativo/mittente/referente-amministrativo/visualizzazione-notifiche-inviate/accesso-ai-documenti-relativi-ad-una-notifica.md)
        * [Accesso agli atti opponibili ai terzi ed ai documenti relativi alla notificazione analogica e digita](../../../oBwhR0C1TZjRAwNbGVus/piattaforma-notifiche-manuale-operativo/mittente/referente-amministrativo/visualizzazione-notifiche-inviate/accesso-agli-atti-opponibili-ai-terzi-ed-ai-documenti-relativi-alla-notificazione-analogica-e-digita.md)
      * [Visualizzazione di dati statistici](../../../oBwhR0C1TZjRAwNbGVus/piattaforma-notifiche-manuale-operativo/mittente/referente-amministrativo/visualizzazione-di-dati-statistici.md)
      * [Rimozione del mittente da Piattaforma Notifiche](../../../oBwhR0C1TZjRAwNbGVus/piattaforma-notifiche-manuale-operativo/mittente/referente-amministrativo/rimozione-del-mittente-da-piattaforma-notifiche/README.md)
        * [Cessazione richiesta dalla PA](../../../oBwhR0C1TZjRAwNbGVus/piattaforma-notifiche-manuale-operativo/mittente/referente-amministrativo/rimozione-del-mittente-da-piattaforma-notifiche/cessazione-richiesta-dalla-pa.md)
        * [Cessazione richiesta da PagoPA S.p.A.](../../../oBwhR0C1TZjRAwNbGVus/piattaforma-notifiche-manuale-operativo/mittente/referente-amministrativo/rimozione-del-mittente-da-piattaforma-notifiche/cessazione-richiesta-da-pagopa-s.p.a..md)
    * [Referente Tecnico](../../../oBwhR0C1TZjRAwNbGVus/piattaforma-notifiche-manuale-operativo/mittente/referente-tecnico/README.md)
      * [Accesso a Piattaforma Notifiche](../../../oBwhR0C1TZjRAwNbGVus/piattaforma-notifiche-manuale-operativo/mittente/referente-tecnico/accesso-a-piattaforma-notifiche.md)
      * [Invio manuale di una notifica](../../../oBwhR0C1TZjRAwNbGVus/piattaforma-notifiche-manuale-operativo/mittente/referente-tecnico/invio-manuale-di-una-notifica.md)
      * [Gestione API Key](../../../oBwhR0C1TZjRAwNbGVus/piattaforma-notifiche-manuale-operativo/mittente/referente-tecnico/gestione-api-key/README.md)
        * [Visualizzazione API Key](../../../oBwhR0C1TZjRAwNbGVus/piattaforma-notifiche-manuale-operativo/mittente/referente-tecnico/gestione-api-key/visualizzazione-api-key.md)
        * [Creazione API Key](../../../oBwhR0C1TZjRAwNbGVus/piattaforma-notifiche-manuale-operativo/mittente/referente-tecnico/gestione-api-key/creazione-api-key.md)
        * [Rotazione API Key](../../../oBwhR0C1TZjRAwNbGVus/piattaforma-notifiche-manuale-operativo/mittente/referente-tecnico/gestione-api-key/rotazione-api-key.md)
        * [Blocco API Key](../../../oBwhR0C1TZjRAwNbGVus/piattaforma-notifiche-manuale-operativo/mittente/referente-tecnico/gestione-api-key/blocco-api-key.md)
        * [Riattivazione API Key](../../../oBwhR0C1TZjRAwNbGVus/piattaforma-notifiche-manuale-operativo/mittente/referente-tecnico/gestione-api-key/riattivazione-api-key.md)
      * [Utilizzo di PN attraverso API B2B](../../../oBwhR0C1TZjRAwNbGVus/piattaforma-notifiche-manuale-operativo/mittente/referente-tecnico/utilizzo-di-pn-attraverso-api-b2b/README.md)
        * [Invio notifiche tramite API B2B](../../../oBwhR0C1TZjRAwNbGVus/piattaforma-notifiche-manuale-operativo/mittente/referente-tecnico/utilizzo-di-pn-attraverso-api-b2b/invio-notifiche-tramite-api-b2b.md)
        * [Recupero documenti tramite API B2B](../../../oBwhR0C1TZjRAwNbGVus/piattaforma-notifiche-manuale-operativo/mittente/referente-tecnico/utilizzo-di-pn-attraverso-api-b2b/recupero-documenti-tramite-api-b2b.md)
      * [Visualizzazione notifiche inviate](../../../oBwhR0C1TZjRAwNbGVus/piattaforma-notifiche-manuale-operativo/mittente/referente-tecnico/visualizzazione-notifiche-inviate.md)
      * [Visualizzazione di dati statistici](../../../oBwhR0C1TZjRAwNbGVus/piattaforma-notifiche-manuale-operativo/mittente/referente-tecnico/visualizzazione-di-dati-statistici.md)
  * [Destinatari](../../../oBwhR0C1TZjRAwNbGVus/piattaforma-notifiche-manuale-operativo/destinatari/README.md)
    * [Persone fisiche](../../../oBwhR0C1TZjRAwNbGVus/piattaforma-notifiche-manuale-operativo/destinatari/persone-fisiche/README.md)
      * [Accesso a Piattaforma Notifiche](../../../oBwhR0C1TZjRAwNbGVus/piattaforma-notifiche-manuale-operativo/destinatari/persone-fisiche/accesso-a-piattaforma-notifiche.md)
      * [Visualizzazione delle Notifiche](../../../oBwhR0C1TZjRAwNbGVus/piattaforma-notifiche-manuale-operativo/destinatari/persone-fisiche/visualizzazione-delle-notifiche/README.md)
        * [Visualizzazione notifiche per il destinatario](../../../oBwhR0C1TZjRAwNbGVus/piattaforma-notifiche-manuale-operativo/destinatari/persone-fisiche/visualizzazione-delle-notifiche/visualizzazione-notifiche-per-il-destinatario.md)
        * [Dettagli di una notifica per il destinatario e/o suo delegato](../../../oBwhR0C1TZjRAwNbGVus/piattaforma-notifiche-manuale-operativo/destinatari/persone-fisiche/visualizzazione-delle-notifiche/dettagli-di-una-notifica-per-il-destinatario-e-o-suo-delegato.md)
        * [Accesso ai documenti relativi ad una notifica](../../../oBwhR0C1TZjRAwNbGVus/piattaforma-notifiche-manuale-operativo/destinatari/persone-fisiche/visualizzazione-delle-notifiche/accesso-ai-documenti-relativi-ad-una-notifica.md)
        * [Accesso agli atti opponibili ai terzi ed ai documenti della notificazione analogica o digitale](../../../oBwhR0C1TZjRAwNbGVus/piattaforma-notifiche-manuale-operativo/destinatari/persone-fisiche/visualizzazione-delle-notifiche/accesso-agli-atti-opponibili-ai-terzi-ed-ai-documenti-della-notificazione-analogica-o-digitale.md)
        * [Pagamento](../../../oBwhR0C1TZjRAwNbGVus/piattaforma-notifiche-manuale-operativo/destinatari/persone-fisiche/visualizzazione-delle-notifiche/pagamento.md)
      * [Configurazione dei recapiti digitali](../../../oBwhR0C1TZjRAwNbGVus/piattaforma-notifiche-manuale-operativo/destinatari/persone-fisiche/configurazione-dei-recapiti-digitali/README.md)
        * [Visualizzazione dei tuoi recapiti digitali](../../../oBwhR0C1TZjRAwNbGVus/piattaforma-notifiche-manuale-operativo/destinatari/persone-fisiche/configurazione-dei-recapiti-digitali/visualizzazione-dei-tuoi-recapiti-digitali.md)
        * [Aggiunta di un recapito legale](../../../oBwhR0C1TZjRAwNbGVus/piattaforma-notifiche-manuale-operativo/destinatari/persone-fisiche/configurazione-dei-recapiti-digitali/aggiunta-di-un-recapito-legale.md)
        * [Aggiunta di un recapito Email o SMS](../../../oBwhR0C1TZjRAwNbGVus/piattaforma-notifiche-manuale-operativo/destinatari/persone-fisiche/configurazione-dei-recapiti-digitali/aggiunta-di-un-recapito-email-o-sms.md)
        * [Aggiunta di Altri recapiti](../../../oBwhR0C1TZjRAwNbGVus/piattaforma-notifiche-manuale-operativo/destinatari/persone-fisiche/configurazione-dei-recapiti-digitali/aggiunta-di-altri-recapiti.md)
        * [Cancellazione di un recapito legale](../../../oBwhR0C1TZjRAwNbGVus/piattaforma-notifiche-manuale-operativo/destinatari/persone-fisiche/configurazione-dei-recapiti-digitali/cancellazione-di-un-recapito-legale.md)
        * [Cancellazione di un recapito “Email o SMS”](../../../oBwhR0C1TZjRAwNbGVus/piattaforma-notifiche-manuale-operativo/destinatari/persone-fisiche/configurazione-dei-recapiti-digitali/cancellazione-di-un-recapito-email-o-sms.md)
        * [Modifica di un recapito legale](../../../oBwhR0C1TZjRAwNbGVus/piattaforma-notifiche-manuale-operativo/destinatari/persone-fisiche/configurazione-dei-recapiti-digitali/modifica-di-un-recapito-legale.md)
        * [Modifica di un recapito Email o SMS](../../../oBwhR0C1TZjRAwNbGVus/piattaforma-notifiche-manuale-operativo/destinatari/persone-fisiche/configurazione-dei-recapiti-digitali/modifica-di-un-recapito-email-o-sms.md)
        * [Modifica di un Altro recapito](../../../oBwhR0C1TZjRAwNbGVus/piattaforma-notifiche-manuale-operativo/destinatari/persone-fisiche/configurazione-dei-recapiti-digitali/modifica-di-un-altro-recapito.md)
      * [Gestione delle deleghe](../../../oBwhR0C1TZjRAwNbGVus/piattaforma-notifiche-manuale-operativo/destinatari/persone-fisiche/gestione-delle-deleghe/README.md)
        * [Visualizzazione delle deleghe](../../../oBwhR0C1TZjRAwNbGVus/piattaforma-notifiche-manuale-operativo/destinatari/persone-fisiche/gestione-delle-deleghe/visualizzazione-delle-deleghe.md)
        * [Creazione di una delega](../../../oBwhR0C1TZjRAwNbGVus/piattaforma-notifiche-manuale-operativo/destinatari/persone-fisiche/gestione-delle-deleghe/creazione-di-una-delega.md)
        * [Recupero codice di accettazione di una delega](../../../oBwhR0C1TZjRAwNbGVus/piattaforma-notifiche-manuale-operativo/destinatari/persone-fisiche/gestione-delle-deleghe/recupero-codice-di-accettazione-di-una-delega.md)
        * [Cancellazione di una delega](../../../oBwhR0C1TZjRAwNbGVus/piattaforma-notifiche-manuale-operativo/destinatari/persone-fisiche/gestione-delle-deleghe/cancellazione-di-una-delega.md)
        * [Accettazione di una delega](../../../oBwhR0C1TZjRAwNbGVus/piattaforma-notifiche-manuale-operativo/destinatari/persone-fisiche/gestione-delle-deleghe/accettazione-di-una-delega.md)
        * [Revoca di una delega](../../../oBwhR0C1TZjRAwNbGVus/piattaforma-notifiche-manuale-operativo/destinatari/persone-fisiche/gestione-delle-deleghe/revoca-di-una-delega.md)
        * [Rifiuto di una delega](../../../oBwhR0C1TZjRAwNbGVus/piattaforma-notifiche-manuale-operativo/destinatari/persone-fisiche/gestione-delle-deleghe/rifiuto-di-una-delega.md)
      * [Uscita da Piattaforma Notifiche](../../../oBwhR0C1TZjRAwNbGVus/piattaforma-notifiche-manuale-operativo/destinatari/persone-fisiche/uscita-da-piattaforma-notifiche.md)
      * [Integrazione con IO](../../../oBwhR0C1TZjRAwNbGVus/piattaforma-notifiche-manuale-operativo/destinatari/persone-fisiche/integrazione-con-io.md)
    * [Persone giuridiche](../../../oBwhR0C1TZjRAwNbGVus/piattaforma-notifiche-manuale-operativo/destinatari/persone-giuridiche/README.md)
      * [Accesso a Piattaforma Notifiche del Legale Rappresentante](../../../oBwhR0C1TZjRAwNbGVus/piattaforma-notifiche-manuale-operativo/destinatari/persone-giuridiche/accesso-a-piattaforma-notifiche-del-legale-rappresentante.md)
      * [I ruoli in Piattaforma Notifiche per le persone giuridiche](../../../oBwhR0C1TZjRAwNbGVus/piattaforma-notifiche-manuale-operativo/destinatari/persone-giuridiche/i-ruoli-in-piattaforma-notifiche-per-le-persone-giuridiche.md)
      * [Configurazione gruppi](../../../oBwhR0C1TZjRAwNbGVus/piattaforma-notifiche-manuale-operativo/destinatari/persone-giuridiche/configurazione-gruppi.md)
      * [Configurazione utenti](../../../oBwhR0C1TZjRAwNbGVus/piattaforma-notifiche-manuale-operativo/destinatari/persone-giuridiche/configurazione-utenti/README.md)
        * [Visualizzazione degli utenti](../../../oBwhR0C1TZjRAwNbGVus/piattaforma-notifiche-manuale-operativo/destinatari/persone-giuridiche/configurazione-utenti/visualizzazione-degli-utenti.md)
        * [Aggiunta di un utente da parte di un amministratore](../../../oBwhR0C1TZjRAwNbGVus/piattaforma-notifiche-manuale-operativo/destinatari/persone-giuridiche/configurazione-utenti/aggiunta-di-un-utente-da-parte-di-un-amministratore.md)
        * [Aggiunta di un utente da parte di un amministratore di gruppo](../../../oBwhR0C1TZjRAwNbGVus/piattaforma-notifiche-manuale-operativo/destinatari/persone-giuridiche/configurazione-utenti/aggiunta-di-un-utente-da-parte-di-un-amministratore-di-gruppo.md)
        * [Modifica di un utente da parte di un amministratore](../../../oBwhR0C1TZjRAwNbGVus/piattaforma-notifiche-manuale-operativo/destinatari/persone-giuridiche/configurazione-utenti/modifica-di-un-utente-da-parte-di-un-amministratore.md)
        * [Modifica di un utente da parte di un amministratore di gruppo](../../../oBwhR0C1TZjRAwNbGVus/piattaforma-notifiche-manuale-operativo/destinatari/persone-giuridiche/configurazione-utenti/modifica-di-un-utente-da-parte-di-un-amministratore-di-gruppo.md)
        * [Cancellazione di un utente](../../../oBwhR0C1TZjRAwNbGVus/piattaforma-notifiche-manuale-operativo/destinatari/persone-giuridiche/configurazione-utenti/cancellazione-di-un-utente.md)
        * [Verifica degli utenti configurati](../../../oBwhR0C1TZjRAwNbGVus/piattaforma-notifiche-manuale-operativo/destinatari/persone-giuridiche/configurazione-utenti/verifica-degli-utenti-configurati.md)
      * [Accesso a Piattaforma Notifiche di un dipendente della persona giuridica](../../../oBwhR0C1TZjRAwNbGVus/piattaforma-notifiche-manuale-operativo/destinatari/persone-giuridiche/accesso-a-piattaforma-notifiche-di-un-dipendente-della-persona-giuridica.md)
      * [Visualizzazione delle Notifiche Ricevute](../../../oBwhR0C1TZjRAwNbGVus/piattaforma-notifiche-manuale-operativo/destinatari/persone-giuridiche/visualizzazione-delle-notifiche-ricevute.md)
      * [Configurazione domicili e recapiti digitali](../../../oBwhR0C1TZjRAwNbGVus/piattaforma-notifiche-manuale-operativo/destinatari/persone-giuridiche/configurazione-domicili-e-recapiti-digitali.md)
      * [Gestione delle deleghe](../../../oBwhR0C1TZjRAwNbGVus/piattaforma-notifiche-manuale-operativo/destinatari/persone-giuridiche/gestione-delle-deleghe.md)
      * [Visualizzazione e gestione delle notifiche per le quali si è delegati](../../../oBwhR0C1TZjRAwNbGVus/piattaforma-notifiche-manuale-operativo/destinatari/persone-giuridiche/visualizzazione-e-gestione-delle-notifiche-per-le-quali-si-e-delegati.md)
  * [Servizi forniti dagli Uffici Postali](../../../oBwhR0C1TZjRAwNbGVus/piattaforma-notifiche-manuale-operativo/servizi-forniti-dagli-uffici-postali/README.md)
    * [Accesso agli atti notificati](../../../oBwhR0C1TZjRAwNbGVus/piattaforma-notifiche-manuale-operativo/servizi-forniti-dagli-uffici-postali/accesso-agli-atti-notificati.md)
    * [Accesso a notifiche non recapitate](../../../oBwhR0C1TZjRAwNbGVus/piattaforma-notifiche-manuale-operativo/servizi-forniti-dagli-uffici-postali/accesso-a-notifiche-non-recapitate.md)
