docs/send/manuale-operativo/v1.1/SUMMARY.md
# Table of contents

* [Piattaforma Notifiche Digitali - Manuale Operativo](README.md)
  * [Glossario](../../../fJIYTgeiXFHm8gUu4gAD/piattaforma-notifiche-digitali-manuale-operativo/glossario.md)
  * [Il processo di notificazione](../../../fJIYTgeiXFHm8gUu4gAD/piattaforma-notifiche-digitali-manuale-operativo/il-processo-di-notificazione/README.md)
    * [Spese della notifica](../../../fJIYTgeiXFHm8gUu4gAD/piattaforma-notifiche-digitali-manuale-operativo/il-processo-di-notificazione/spese-della-notifica.md)
    * [Notificazione digitale](../../../fJIYTgeiXFHm8gUu4gAD/piattaforma-notifiche-digitali-manuale-operativo/il-processo-di-notificazione/notificazione-digitale.md)
    * [Notificazione analogica](../../../fJIYTgeiXFHm8gUu4gAD/piattaforma-notifiche-digitali-manuale-operativo/il-processo-di-notificazione/notificazione-analogica.md)
    * [Esempi di perfezionamento](../../../fJIYTgeiXFHm8gUu4gAD/piattaforma-notifiche-digitali-manuale-operativo/il-processo-di-notificazione/esempi-di-perfezionamento.md)
    * [Specifiche tecniche dei PDF allegati alla notifica](../../../fJIYTgeiXFHm8gUu4gAD/piattaforma-notifiche-digitali-manuale-operativo/il-processo-di-notificazione/specifiche-tecniche-dei-pdf-allegati-alla-notifica.md)
  * [Comprendere lo Stato della notifica e gli atti disponibili sul portale](../../../fJIYTgeiXFHm8gUu4gAD/piattaforma-notifiche-digitali-manuale-operativo/comprendere-lo-stato-della-notifica-e-gli-atti-disponibili-sul-portale/README.md)
    * [Notificazione digitale](../../../fJIYTgeiXFHm8gUu4gAD/piattaforma-notifiche-digitali-manuale-operativo/comprendere-lo-stato-della-notifica-e-gli-atti-disponibili-sul-portale/notificazione-digitale.md)
    * [Notificazione analogica](../../../fJIYTgeiXFHm8gUu4gAD/piattaforma-notifiche-digitali-manuale-operativo/comprendere-lo-stato-della-notifica-e-gli-atti-disponibili-sul-portale/notificazione-analogica.md)
    * [Destinatari multipli](../../../fJIYTgeiXFHm8gUu4gAD/piattaforma-notifiche-digitali-manuale-operativo/comprendere-lo-stato-della-notifica-e-gli-atti-disponibili-sul-portale/destinatari-multipli.md)
    * [Stato della notifica](../../../fJIYTgeiXFHm8gUu4gAD/piattaforma-notifiche-digitali-manuale-operativo/comprendere-lo-stato-della-notifica-e-gli-atti-disponibili-sul-portale/stato-della-notifica.md)
    * [Attestazione opponibili ai terzi](../../../fJIYTgeiXFHm8gUu4gAD/piattaforma-notifiche-digitali-manuale-operativo/comprendere-lo-stato-della-notifica-e-gli-atti-disponibili-sul-portale/attestazione-opponibili-ai-terzi.md)
  * [La protezione dei dati](../../../fJIYTgeiXFHm8gUu4gAD/piattaforma-notifiche-digitali-manuale-operativo/la-protezione-dei-dati/README.md)
    * [Verifica dei dati in ingresso](../../../fJIYTgeiXFHm8gUu4gAD/piattaforma-notifiche-digitali-manuale-operativo/la-protezione-dei-dati/verifica-dei-dati-in-ingresso.md)
    * [Immodificabilità dei documenti informatici memorizzati](../../../fJIYTgeiXFHm8gUu4gAD/piattaforma-notifiche-digitali-manuale-operativo/la-protezione-dei-dati/immodificabilita-dei-documenti-informatici-memorizzati.md)
    * [Generazione delle attestazioni opponibili ai terzi](../../../fJIYTgeiXFHm8gUu4gAD/piattaforma-notifiche-digitali-manuale-operativo/la-protezione-dei-dati/generazione-delle-attestazioni-opponibili-ai-terzi.md)
    * [Log di sistema - anonimizzazione e conservazione](../../../fJIYTgeiXFHm8gUu4gAD/piattaforma-notifiche-digitali-manuale-operativo/la-protezione-dei-dati/log-di-sistema-anonimizzazione-e-conservazione.md)
    * [Altri dati - conservazione](../../../fJIYTgeiXFHm8gUu4gAD/piattaforma-notifiche-digitali-manuale-operativo/la-protezione-dei-dati/altri-dati-conservazione.md)
  * [Mittente](../../../fJIYTgeiXFHm8gUu4gAD/piattaforma-notifiche-digitali-manuale-operativo/mittente/README.md)
    * [Area Riservata portale Self Care](../../../fJIYTgeiXFHm8gUu4gAD/piattaforma-notifiche-digitali-manuale-operativo/mittente/area-riservata-portale-self-care.md)
    * [Funzionario autorizzato del mittente](../../../fJIYTgeiXFHm8gUu4gAD/piattaforma-notifiche-digitali-manuale-operativo/mittente/funzionario-autorizzato-del-mittente/README.md)
      * [Richiesta di Onboarding - processo di adesione](../../../fJIYTgeiXFHm8gUu4gAD/piattaforma-notifiche-digitali-manuale-operativo/mittente/funzionario-autorizzato-del-mittente/richiesta-di-onboarding-processo-di-adesione.md)
    * [Amministratore / Referente Amministrativo](../../../fJIYTgeiXFHm8gUu4gAD/piattaforma-notifiche-digitali-manuale-operativo/mittente/amministratore-referente-amministrativo/README.md)
      * [Accesso all’Area Riservata](../../../fJIYTgeiXFHm8gUu4gAD/piattaforma-notifiche-digitali-manuale-operativo/mittente/amministratore-referente-amministrativo/accesso-allarea-riservata.md)
      * [Dashboard](../../../fJIYTgeiXFHm8gUu4gAD/piattaforma-notifiche-digitali-manuale-operativo/mittente/amministratore-referente-amministrativo/dashboard.md)
      * [Configurazione utenti](../../../fJIYTgeiXFHm8gUu4gAD/piattaforma-notifiche-digitali-manuale-operativo/mittente/amministratore-referente-amministrativo/configurazione-utenti.md)
      * [Configurazione gruppi](../../../fJIYTgeiXFHm8gUu4gAD/piattaforma-notifiche-digitali-manuale-operativo/mittente/amministratore-referente-amministrativo/configurazione-gruppi.md)
      * [Accesso a Piattaforme Notifiche](../../../fJIYTgeiXFHm8gUu4gAD/piattaforma-notifiche-digitali-manuale-operativo/mittente/amministratore-referente-amministrativo/accesso-a-piattaforme-notifiche.md)
      * [Invio manuale di una notifica](../../../fJIYTgeiXFHm8gUu4gAD/piattaforma-notifiche-digitali-manuale-operativo/mittente/amministratore-referente-amministrativo/invio-manuale-di-una-notifica.md)
      * [Visualizzazione notifiche inviate](../../../fJIYTgeiXFHm8gUu4gAD/piattaforma-notifiche-digitali-manuale-operativo/mittente/amministratore-referente-amministrativo/visualizzazione-notifiche-inviate/README.md)
        * [Visualizzazione notifiche per il mittente](../../../fJIYTgeiXFHm8gUu4gAD/piattaforma-notifiche-digitali-manuale-operativo/mittente/amministratore-referente-amministrativo/visualizzazione-notifiche-inviate/visualizzazione-notifiche-per-il-mittente.md)
        * [Dettagli di una notifica per il mittente](../../../fJIYTgeiXFHm8gUu4gAD/piattaforma-notifiche-digitali-manuale-operativo/mittente/amministratore-referente-amministrativo/visualizzazione-notifiche-inviate/dettagli-di-una-notifica-per-il-mittente.md)
        * [Accesso ai documenti relativi ad una notifica](../../../fJIYTgeiXFHm8gUu4gAD/piattaforma-notifiche-digitali-manuale-operativo/mittente/amministratore-referente-amministrativo/visualizzazione-notifiche-inviate/accesso-ai-documenti-relativi-ad-una-notifica.md)
        * [Accesso agli atti opponibili ai terzi ed ai documenti relativi alla notificazione analogica e digita](../../../fJIYTgeiXFHm8gUu4gAD/piattaforma-notifiche-digitali-manuale-operativo/mittente/amministratore-referente-amministrativo/visualizzazione-notifiche-inviate/accesso-agli-atti-opponibili-ai-terzi-ed-ai-documenti-relativi-alla-notificazione-analogica-e-digita.md)
      * [Rimozione del mittente da Piattaforma Notifiche](../../../fJIYTgeiXFHm8gUu4gAD/piattaforma-notifiche-digitali-manuale-operativo/mittente/amministratore-referente-amministrativo/rimozione-del-mittente-da-piattaforma-notifiche/README.md)
        * [Cessazione richiesta dalla PA](../../../fJIYTgeiXFHm8gUu4gAD/piattaforma-notifiche-digitali-manuale-operativo/mittente/amministratore-referente-amministrativo/rimozione-del-mittente-da-piattaforma-notifiche/cessazione-richiesta-dalla-pa.md)
        * [Cessazione richiesta da PagoPA S.p.A.](../../../fJIYTgeiXFHm8gUu4gAD/piattaforma-notifiche-digitali-manuale-operativo/mittente/amministratore-referente-amministrativo/rimozione-del-mittente-da-piattaforma-notifiche/cessazione-richiesta-da-pagopa-s.p.a..md)
    * [Referente Tecnico / Operatore](../../../fJIYTgeiXFHm8gUu4gAD/piattaforma-notifiche-digitali-manuale-operativo/mittente/referente-tecnico-operatore/README.md)
      * [Accesso a Piattaforma Notifiche](../../../fJIYTgeiXFHm8gUu4gAD/piattaforma-notifiche-digitali-manuale-operativo/mittente/referente-tecnico-operatore/accesso-a-piattaforma-notifiche.md)
      * [Invio manuale di una notifica](../../../fJIYTgeiXFHm8gUu4gAD/piattaforma-notifiche-digitali-manuale-operativo/mittente/referente-tecnico-operatore/invio-manuale-di-una-notifica.md)
      * [Gestione API Key](../../../fJIYTgeiXFHm8gUu4gAD/piattaforma-notifiche-digitali-manuale-operativo/mittente/referente-tecnico-operatore/gestione-api-key/README.md)
        * [Visualizzazione API Key](../../../fJIYTgeiXFHm8gUu4gAD/piattaforma-notifiche-digitali-manuale-operativo/mittente/referente-tecnico-operatore/gestione-api-key/visualizzazione-api-key.md)
        * [Creazione API Key](../../../fJIYTgeiXFHm8gUu4gAD/piattaforma-notifiche-digitali-manuale-operativo/mittente/referente-tecnico-operatore/gestione-api-key/creazione-api-key.md)
        * [Rotazione API Key](../../../fJIYTgeiXFHm8gUu4gAD/piattaforma-notifiche-digitali-manuale-operativo/mittente/referente-tecnico-operatore/gestione-api-key/rotazione-api-key.md)
        * [Blocco API Key](../../../fJIYTgeiXFHm8gUu4gAD/piattaforma-notifiche-digitali-manuale-operativo/mittente/referente-tecnico-operatore/gestione-api-key/blocco-api-key.md)
        * [Eliminazione Api Key](../../../fJIYTgeiXFHm8gUu4gAD/piattaforma-notifiche-digitali-manuale-operativo/mittente/referente-tecnico-operatore/gestione-api-key/eliminazione-api-key.md)
        * [Riattivazione API Key](../../../fJIYTgeiXFHm8gUu4gAD/piattaforma-notifiche-digitali-manuale-operativo/mittente/referente-tecnico-operatore/gestione-api-key/riattivazione-api-key.md)
      * [Utilizzo di PN attraverso API B2B](../../../fJIYTgeiXFHm8gUu4gAD/piattaforma-notifiche-digitali-manuale-operativo/mittente/referente-tecnico-operatore/utilizzo-di-pn-attraverso-api-b2b/README.md)
        * [Invio notifiche tramite API B2B](../../../fJIYTgeiXFHm8gUu4gAD/piattaforma-notifiche-digitali-manuale-operativo/mittente/referente-tecnico-operatore/utilizzo-di-pn-attraverso-api-b2b/invio-notifiche-tramite-api-b2b.md)
        * [Recupero documenti tramite API B2B](../../../fJIYTgeiXFHm8gUu4gAD/piattaforma-notifiche-digitali-manuale-operativo/mittente/referente-tecnico-operatore/utilizzo-di-pn-attraverso-api-b2b/recupero-documenti-tramite-api-b2b.md)
      * [Visualizzazione notifiche inviate](../../../fJIYTgeiXFHm8gUu4gAD/piattaforma-notifiche-digitali-manuale-operativo/mittente/referente-tecnico-operatore/visualizzazione-notifiche-inviate.md)
  * [Destinatari](../../../fJIYTgeiXFHm8gUu4gAD/piattaforma-notifiche-digitali-manuale-operativo/destinatari/README.md)
    * [Persone fisiche](../../../fJIYTgeiXFHm8gUu4gAD/piattaforma-notifiche-digitali-manuale-operativo/destinatari/persone-fisiche/README.md)
      * [Accesso a Piattaforma Notifiche](../../../fJIYTgeiXFHm8gUu4gAD/piattaforma-notifiche-digitali-manuale-operativo/destinatari/persone-fisiche/accesso-a-piattaforma-notifiche.md)
      * [Visualizzazione delle Notifiche](../../../fJIYTgeiXFHm8gUu4gAD/piattaforma-notifiche-digitali-manuale-operativo/destinatari/persone-fisiche/visualizzazione-delle-notifiche/README.md)
        * [Visualizzazione notifiche per il destinatario](../../../fJIYTgeiXFHm8gUu4gAD/piattaforma-notifiche-digitali-manuale-operativo/destinatari/persone-fisiche/visualizzazione-delle-notifiche/visualizzazione-notifiche-per-il-destinatario.md)
        * [Dettagli di una notifica per il destinatario e/o suo delegato](../../../fJIYTgeiXFHm8gUu4gAD/piattaforma-notifiche-digitali-manuale-operativo/destinatari/persone-fisiche/visualizzazione-delle-notifiche/dettagli-di-una-notifica-per-il-destinatario-e-o-suo-delegato.md)
        * [Accesso ai documenti relativi ad una notifica](../../../fJIYTgeiXFHm8gUu4gAD/piattaforma-notifiche-digitali-manuale-operativo/destinatari/persone-fisiche/visualizzazione-delle-notifiche/accesso-ai-documenti-relativi-ad-una-notifica.md)
        * [Accesso agli atti opponibili ai terzi ed ai documenti della notificazione analogica o digitale](../../../fJIYTgeiXFHm8gUu4gAD/piattaforma-notifiche-digitali-manuale-operativo/destinatari/persone-fisiche/visualizzazione-delle-notifiche/accesso-agli-atti-opponibili-ai-terzi-ed-ai-documenti-della-notificazione-analogica-o-digitale.md)
        * [Pagamento](../../../fJIYTgeiXFHm8gUu4gAD/piattaforma-notifiche-digitali-manuale-operativo/destinatari/persone-fisiche/visualizzazione-delle-notifiche/pagamento.md)
      * [Configurazione dei recapiti digitali](../../../fJIYTgeiXFHm8gUu4gAD/piattaforma-notifiche-digitali-manuale-operativo/destinatari/persone-fisiche/configurazione-dei-recapiti-digitali/README.md)
        * [Visualizzazione dei tuoi recapiti digitali](../../../fJIYTgeiXFHm8gUu4gAD/piattaforma-notifiche-digitali-manuale-operativo/destinatari/persone-fisiche/configurazione-dei-recapiti-digitali/visualizzazione-dei-tuoi-recapiti-digitali.md)
        * [Aggiunta di un recapito legale](../../../fJIYTgeiXFHm8gUu4gAD/piattaforma-notifiche-digitali-manuale-operativo/destinatari/persone-fisiche/configurazione-dei-recapiti-digitali/aggiunta-di-un-recapito-legale.md)
        * [Aggiunta di un recapito digitale "Email o SMS"](../../../fJIYTgeiXFHm8gUu4gAD/piattaforma-notifiche-digitali-manuale-operativo/destinatari/persone-fisiche/configurazione-dei-recapiti-digitali/aggiunta-di-un-recapito-digitale-email-o-sms.md)
        * [Aggiunta di Altri recapiti](../../../fJIYTgeiXFHm8gUu4gAD/piattaforma-notifiche-digitali-manuale-operativo/destinatari/persone-fisiche/configurazione-dei-recapiti-digitali/aggiunta-di-altri-recapiti.md)
        * [Cancellazione di un recapito legale](../../../fJIYTgeiXFHm8gUu4gAD/piattaforma-notifiche-digitali-manuale-operativo/destinatari/persone-fisiche/configurazione-dei-recapiti-digitali/cancellazione-di-un-recapito-legale.md)
        * [Cancellazione di un recapito digitale “Email o SMS”](../../../fJIYTgeiXFHm8gUu4gAD/piattaforma-notifiche-digitali-manuale-operativo/destinatari/persone-fisiche/configurazione-dei-recapiti-digitali/cancellazione-di-un-recapito-digitale-email-o-sms.md)
        * [Modifica di un recapito legale](../../../fJIYTgeiXFHm8gUu4gAD/piattaforma-notifiche-digitali-manuale-operativo/destinatari/persone-fisiche/configurazione-dei-recapiti-digitali/modifica-di-un-recapito-legale.md)
        * [Modifica di un recapito digitale "Email o SMS"](../../../fJIYTgeiXFHm8gUu4gAD/piattaforma-notifiche-digitali-manuale-operativo/destinatari/persone-fisiche/configurazione-dei-recapiti-digitali/modifica-di-un-recapito-digitale-email-o-sms.md)
        * [Modifica di un Altro recapito](../../../fJIYTgeiXFHm8gUu4gAD/piattaforma-notifiche-digitali-manuale-operativo/destinatari/persone-fisiche/configurazione-dei-recapiti-digitali/modifica-di-un-altro-recapito.md)
      * [Gestione delle deleghe](../../../fJIYTgeiXFHm8gUu4gAD/piattaforma-notifiche-digitali-manuale-operativo/destinatari/persone-fisiche/gestione-delle-deleghe/README.md)
        * [Visualizzazione delle deleghe](../../../fJIYTgeiXFHm8gUu4gAD/piattaforma-notifiche-digitali-manuale-operativo/destinatari/persone-fisiche/gestione-delle-deleghe/visualizzazione-delle-deleghe.md)
        * [Creazione di una delega](../../../fJIYTgeiXFHm8gUu4gAD/piattaforma-notifiche-digitali-manuale-operativo/destinatari/persone-fisiche/gestione-delle-deleghe/creazione-di-una-delega.md)
        * [Recupero codice di accettazione di una delega](../../../fJIYTgeiXFHm8gUu4gAD/piattaforma-notifiche-digitali-manuale-operativo/destinatari/persone-fisiche/gestione-delle-deleghe/recupero-codice-di-accettazione-di-una-delega.md)
        * [Cancellazione di una delega](../../../fJIYTgeiXFHm8gUu4gAD/piattaforma-notifiche-digitali-manuale-operativo/destinatari/persone-fisiche/gestione-delle-deleghe/cancellazione-di-una-delega.md)
        * [Accettazione di una delega](../../../fJIYTgeiXFHm8gUu4gAD/piattaforma-notifiche-digitali-manuale-operativo/destinatari/persone-fisiche/gestione-delle-deleghe/accettazione-di-una-delega.md)
        * [Revoca di una delega](../../../fJIYTgeiXFHm8gUu4gAD/piattaforma-notifiche-digitali-manuale-operativo/destinatari/persone-fisiche/gestione-delle-deleghe/revoca-di-una-delega.md)
        * [Rifiuto di una delega](../../../fJIYTgeiXFHm8gUu4gAD/piattaforma-notifiche-digitali-manuale-operativo/destinatari/persone-fisiche/gestione-delle-deleghe/rifiuto-di-una-delega.md)
      * [Uscita da Piattaforma Notifiche](../../../fJIYTgeiXFHm8gUu4gAD/piattaforma-notifiche-digitali-manuale-operativo/destinatari/persone-fisiche/uscita-da-piattaforma-notifiche.md)
      * [Integrazione con IO](../../../fJIYTgeiXFHm8gUu4gAD/piattaforma-notifiche-digitali-manuale-operativo/destinatari/persone-fisiche/integrazione-con-io.md)
    * [Persone giuridiche](../../../fJIYTgeiXFHm8gUu4gAD/piattaforma-notifiche-digitali-manuale-operativo/destinatari/persone-giuridiche/README.md)
      * [Accesso a Piattaforma Notifiche del Legale Rappresentante](../../../fJIYTgeiXFHm8gUu4gAD/piattaforma-notifiche-digitali-manuale-operativo/destinatari/persone-giuridiche/accesso-a-piattaforma-notifiche-del-legale-rappresentante.md)
      * [I ruoli in Piattaforma Notifiche per le persone giuridiche](../../../fJIYTgeiXFHm8gUu4gAD/piattaforma-notifiche-digitali-manuale-operativo/destinatari/persone-giuridiche/i-ruoli-in-piattaforma-notifiche-per-le-persone-giuridiche.md)
      * [Configurazione gruppi](../../../fJIYTgeiXFHm8gUu4gAD/piattaforma-notifiche-digitali-manuale-operativo/destinatari/persone-giuridiche/configurazione-gruppi.md)
      * [Configurazione utenti](../../../fJIYTgeiXFHm8gUu4gAD/piattaforma-notifiche-digitali-manuale-operativo/destinatari/persone-giuridiche/configurazione-utenti/README.md)
        * [Visualizzazione degli utenti](../../../fJIYTgeiXFHm8gUu4gAD/piattaforma-notifiche-digitali-manuale-operativo/destinatari/persone-giuridiche/configurazione-utenti/visualizzazione-degli-utenti.md)
        * [Aggiunta di un utente da parte di un amministratore](../../../fJIYTgeiXFHm8gUu4gAD/piattaforma-notifiche-digitali-manuale-operativo/destinatari/persone-giuridiche/configurazione-utenti/aggiunta-di-un-utente-da-parte-di-un-amministratore.md)
        * [Aggiunta di un utente da parte di un amministratore di gruppo](../../../fJIYTgeiXFHm8gUu4gAD/piattaforma-notifiche-digitali-manuale-operativo/destinatari/persone-giuridiche/configurazione-utenti/aggiunta-di-un-utente-da-parte-di-un-amministratore-di-gruppo.md)
        * [Modifica di un utente da parte di un amministratore](../../../fJIYTgeiXFHm8gUu4gAD/piattaforma-notifiche-digitali-manuale-operativo/destinatari/persone-giuridiche/configurazione-utenti/modifica-di-un-utente-da-parte-di-un-amministratore.md)
        * [Modifica di un utente da parte di un amministratore di gruppo](../../../fJIYTgeiXFHm8gUu4gAD/piattaforma-notifiche-digitali-manuale-operativo/destinatari/persone-giuridiche/configurazione-utenti/modifica-di-un-utente-da-parte-di-un-amministratore-di-gruppo.md)
        * [Cancellazione di un utente](../../../fJIYTgeiXFHm8gUu4gAD/piattaforma-notifiche-digitali-manuale-operativo/destinatari/persone-giuridiche/configurazione-utenti/cancellazione-di-un-utente.md)
      * [Accesso a Piattaforma Notifiche di un dipendente della persona giuridica](../../../fJIYTgeiXFHm8gUu4gAD/piattaforma-notifiche-digitali-manuale-operativo/destinatari/persone-giuridiche/accesso-a-piattaforma-notifiche-di-un-dipendente-della-persona-giuridica.md)
      * [Visualizzazione delle Notifiche Ricevute](../../../fJIYTgeiXFHm8gUu4gAD/piattaforma-notifiche-digitali-manuale-operativo/destinatari/persone-giuridiche/visualizzazione-delle-notifiche-ricevute.md)
      * [Configurazione domicili e recapiti digitali](../../../fJIYTgeiXFHm8gUu4gAD/piattaforma-notifiche-digitali-manuale-operativo/destinatari/persone-giuridiche/configurazione-domicili-e-recapiti-digitali.md)
      * [Gestione delle deleghe](../../../fJIYTgeiXFHm8gUu4gAD/piattaforma-notifiche-digitali-manuale-operativo/destinatari/persone-giuridiche/gestione-delle-deleghe.md)
      * [Visualizzazione e gestione delle notifiche per le quali si è delegati](../../../fJIYTgeiXFHm8gUu4gAD/piattaforma-notifiche-digitali-manuale-operativo/destinatari/persone-giuridiche/visualizzazione-e-gestione-delle-notifiche-per-le-quali-si-e-delegati.md)
  * [Servizi RADD (Rete Assorbimento Digital Divide)](../../../fJIYTgeiXFHm8gUu4gAD/piattaforma-notifiche-digitali-manuale-operativo/servizi-radd-rete-assorbimento-digital-divide.md)
